--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,13 @@
         android:theme="@style/Theme.MealsMenu"
         tools:targetApi="31">
         <activity
+            android:name=".activity.MealDetailsActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".activity.AppActivity"
             android:exported="true">
             <intent-filter>
@@ -28,4 +35,5 @@
                 android:value="" />
         </activity>
     </application>
+
 </manifest>
